Revert "style: fix overflow for genres in cards"
This reverts commit 4cf0964ae6a20c42f0317870bab828b42e39386c.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,7 +65,7 @@ html {
     margin-bottom: 32px;
     align-items: center;
     flex-direction: column;
-    max-width: calc(var(--max-width));
+    max-width: var(--max-width);
     margin: 0 auto;
 }
 
@@ -80,8 +80,7 @@ html {
 }
 
 #search-input {
-    width: 90%;
-    max-width: 600px;
+    width: 100%;
     margin: 16px 0;
     font-size: 1.2rem;
     border-style: none;
@@ -113,7 +112,7 @@ html {
 /* CARD  */
 .card {
     color: #fff;
-    max-width: 800px;
+    width: 100%;
     height: 147.5px;
     background-color: var(--clr-white);
     color: var(--clr-dark);
@@ -177,7 +176,7 @@ html {
 }
 
 .card-content .bottom .favorite-button {
-    margin-right: 8px;
+    margin-right: 16px;
     font-size: 1.4rem;
 }
 
@@ -197,11 +196,6 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.card-content .genres {
-    height: 30px;
-    overflow: hidden;
 }
 
 .missing-image {
